[gd_scene load_steps=7 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]
[ext_resource path="res://nothing.png" type="Texture" id=2]
[ext_resource path="res://noobtheme.ogg" type="AudioStream" id=3]
[ext_resource path="res://FFForward.tres" type="DynamicFont" id=4]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 0.968627, 0.968627, 0.968627, 1, 0.968627, 0.968627, 0.968627, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )
width = 10000

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -796.787, -249.131 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1316.0
margin_top = -767.0
margin_right = 1342.0
margin_bottom = 1244.0
texture = SubResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0
pitch_scale = 0.5
autoplay = true

[node name="MainMenu" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -340.0
margin_top = 212.0
margin_right = 340.0
margin_bottom = 280.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MainMenu"]
margin_right = 680.0
margin_bottom = 68.0

[node name="Title" type="Label" parent="MainMenu/CenterContainer"]
margin_left = 170.0
margin_top = 23.0
margin_right = 510.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "VERY larGE FLOATing STRUCTure"

[node name="CenterContainer2" type="CenterContainer" parent="MainMenu"]
margin_right = 680.0
margin_bottom = 68.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -42.0
margin_top = 142.0
margin_right = 42.0
margin_bottom = 210.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="New Game" type="Button" parent="VBoxContainer"]
margin_right = 84.0
margin_bottom = 20.0
text = "New Game"

[node name="Load Game" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 84.0
margin_bottom = 44.0
text = "Load Game"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 84.0
margin_bottom = 68.0
text = "Quit"

[connection signal="pressed" from="VBoxContainer/New Game" to="." method="_on_New_Game_pressed"]
[connection signal="pressed" from="VBoxContainer/Load Game" to="." method="_on_Load_Game_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
